# Mathulator

./: Justfile  doc.org  flake.nix  meson.build
src/: apply.c  evaluate.c  main.c  tree.c  utils.c
